--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "globals": "^15.11.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.18",
-    "vite": "^5.4.10"
+    "vite": "^5.4.10",
+    "vite-plugin-pwa": "^1.1.0"
   }
 }
